@@ -18,6 +18,7 @@ exe wave
     :
       <sysinclude>$(BOOST_ROOT)
       <vc-7_1><*><rtti>off        # workaround for compiler bug
+      <vc-7_1-stlport><*><rtti>off
     :
       release
     ;
